Fix broken style

--- a/app/components/container.module.css
+++ b/app/components/container.module.css
@@ -8,7 +8,7 @@
 
 @media screen and (min-width: 960px) {
   .container {
-    padding: none;
+    padding: 0;
     width: 960px;
   }
 }
